--- a/Modulo E/Exercicio6/index.html
+++ b/Modulo E/Exercicio6/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Super Contador</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1> Vamos Contar </h1>
+        <h1> Tabuada </h1>
     </header>
     <section>
         <div id="dados">
-            <p>Início: <input type="number" name="inicio" id="txti"></p>            
-            <p>Fim: <input type="number" name="fim" id="txtf"></p>
-            <p>Passo: <input type="number" name="passo" id="txtp"></p>
-            <p><input type="button" value="Contar" onclick="contar()"></p>
+            <p>
+                Número: <input type="number" name="num" id="txtn">
+                <input type="button" value="Gerar Tabuada" onclick="tabuada()">
+            </p>            
         </div>
-        <div id="res">
-            Preparando a contagem...
+        <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima.</option>
+            </select>
         </div>
     </section>
     <footer>
